--- a/Task Tracker/View/TaskTrackerWindow.xaml
+++ b/Task Tracker/View/TaskTrackerWindow.xaml
@@ -2,9 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:b="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task_Tracker.View"
         xmlns:vm="clr-namespace:Task_Tracker.ViewModel"
+        xmlns:uc="clr-namespace:Task_Tracker.View.UserControls"
         mc:Ignorable="d"
         Title="TaskTrackerWindow" Height="600" Width="800">
 
@@ -22,28 +24,22 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal">
-            <ComboBox x:Name="projectSelectionComboBox"
-						Width="45"
-                        Margin="5"
-						SelectionChanged="ProjectSelectionComboBox_SelectionChanged"/>
             <Button x:Name="addWorkLogButton"
                     Content="New Log"
                     Command="{Binding NewWorkLogCommand}"
                     Width="70"
-                    Margin="0, 5, 5, 5"/>
-            <Button x:Name="deleteWorkLogButton"
-                    Content="Delete log"
-                    Command="{Binding DeleteWorkLogCommand}"
-                    CommandParameter="{Binding SelectedWorkLog}"
-                    Width="70"
-                    Margin="0, 5, 0, 5"/>
+                    Margin="5"/>
         </StackPanel>
         <ListView x:Name="workLogListView"
                   Grid.Row="1"
                   ItemsSource="{Binding WorkLogs}"
                   SelectedItem="{Binding SelectedWorkLog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                   Margin="5, 0, 0, 5">
-
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <uc:WorkLogUserControl />
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
         <Grid Grid.Column="1"
               Margin="0, 5, 5, 5">
@@ -74,7 +70,12 @@
                      Grid.Column="1"
                      Grid.Row="1"
                      Margin="5, 0, 5, 5">
-            
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="LostFocus">
+                    <b:InvokeCommandAction Command="{Binding Source={StaticResource workLogVM}, Path=HasEditedWorkLogCommand}"
+                                           CommandParameter="{Binding}"/>
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
         </RichTextBox>
     </Grid>
 </Window>
