--- a/Task Tracker/View/UserControls/WorkLogUserControl.xaml
+++ b/Task Tracker/View/UserControls/WorkLogUserControl.xaml
@@ -5,8 +5,27 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Task_Tracker.View.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             d:DesignHeight="100" d:DesignWidth="200">
+    <Grid Margin="5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition />
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <TextBlock />
+        <TextBlock Grid.Row="1"/>
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Grid.Row="2">
+            <TextBlock />
+            <Button x:Name="StartPauseButton"
+                    Width="40"
+                    Margin="5"
+                    Content="Start"/>
+            <Button x:Name="StopButton"
+                    Width="40"
+                    Margin="0, 5, 5, 5"
+                    Content="Stop"/>
+        </StackPanel>
     </Grid>
 </UserControl>
